--- a/web-developer.html
+++ b/web-developer.html
@@ -38,6 +38,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://www.php-resource.de/jobs/job,45585,Web-Entwickler-PHP-mwd-PHP-Entwickler--Web-Developer-PHP.htm'>Web Entwickler PHP (m/w/d) PHP Entwickler ? Web Developer PHP Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oW8uafws&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nP3jqMwS'>MORI Associates, Inc. Careers - JavaScript Web Developer - NASA Moon-Mars project</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBwaVfwW&k=Job&j=okFnbfwh&__jvst=Referral+-+Employee&__jvsd=snvEHhwZ&__jvsc=Twitter&bid=nY1jqMwZ'>Automation Anywhere Careers - Sr. Web Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4497570002'>Job Application for Web Developer at KeepTruckin</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
@@ -144,7 +156,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AngeionGroup/743999698528265-web-developer'>Angeion Group Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AngeionGroup/743999698528265-web-developer'>Angeion Group Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PAUnited States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -172,7 +184,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SmartIms1/743999698485668-web-developer'>Smart Ims Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SmartIms1/743999698485668-web-developer'>Smart Ims Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dover, DE</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -204,7 +216,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698456472-web-developer-frontend-ubisoft-club-f-m-d-'>Ubisoft Web Developer Frontend [Ubisoft Club] (f/m/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698456472-web-developer-frontend-ubisoft-club-f-m-d-'>Ubisoft Web Developer Frontend [Ubisoft Club] (f/m/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">D?sseldorf, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -212,7 +224,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/nobul/bddd8265-866e-4349-a060-76d6064e40a4'>Nobul - Front End Web Developer - React</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/nobul/bddd8265-866e-4349-a060-76d6064e40a4'>Nobul - Front End Web Developer - React</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -224,7 +236,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/dae/jobs/web-application-developer-ts-sci-with-polygraph-bf6nraCM4r6BkYaICoXfFy'>Web Application Developer - TS/SCI with Polygraph #0442 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/web-application-developer-ts-sci-with-polygraph-bf6nraCM4r6BkYaICoXfFy'>Web Application Developer - TS/SCI with Polygraph #0442 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -287,7 +299,7 @@
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/praktikum/e584885'>Stellenangebot: Web Developer PHP (m/w/d) (T?bingen) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/praktikum/e584885'>Stellenangebot: Web Developer PHP (m/w/d) (T?bingen) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -409,7 +421,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://nearearthautonomy.applytojob.com/apply/iH2ySRbAXO/Full-Stack-Web-Developer'>Full Stack Web Developer - Near Earth Autonomy - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://nearearthautonomy.applytojob.com/apply/iH2ySRbAXO/Full-Stack-Web-Developer'>Full Stack Web Developer - Near Earth Autonomy - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -443,21 +455,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oW8uafws&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nqnplMwO'>MORI Associates, Inc. Careers - JavaScript Web Developer - NASA Moon-Mars project</a></h5> 
-<p><span class="badge badge-light">Mountain View, California</span></p>
-<p>Posted on:: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ALRiyad/743999698225244-web-developer'>ALRiyad Web Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://www.bigshoesnetwork.com/job/front-end-web-designer-developer/hellermanntyton/19144'>
-	Front-End Web Designer/Developer - HellermannTyton - Big Shoes Network, Inc.
-</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-27</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
