--- a/data-engineer.html
+++ b/data-engineer.html
@@ -69,11 +69,15 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://brivoats2019.applytojob.com/apply/Zewb9HqP5k/Data-Engineer'>Data Engineer - BRIVO SYSTEMS LLC - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<h5><a href='https://jobs.smartrecruiters.com/NealAnalytics/743999698495911-cosmos-big-data-engineer'>Neal Analytics Cosmos Big Data Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Redmond, WA, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/tj3jjyqpyactjaprxu9cbyg6gh'>Data Engineer up to $300,000 | CardinalHire</a></h5> 
+<h5><a href='http://brivoats2019.applytojob.com/apply/Zewb9HqP5k/Data-Engineer'>Data Engineer - BRIVO SYSTEMS LLC - Career Page</a></h5> 
+<p><span class="badge badge-light">Bethesda, MD</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/tj3jjyqpyactjaprxu9cbyg6gh'>Data Engineer up to $300,000 | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -93,7 +97,7 @@
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/quantum-health/job/os1nbfwL'>Quantum Health Careers - Sr QA Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/quantum-health/job/os1nbfwL'>Quantum Health Careers - Sr QA Data Engineer</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -121,7 +125,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tandemmoneylimited/jobs/4492957002'>Job Application for Head of Data Engineering at Tandem Bank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tandemmoneylimited/jobs/4492957002'>Job Application for Head of Data Engineering at Tandem Bank</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -181,7 +185,7 @@ systems,?...</p>
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CPPInvestmentBoard/743999698516709-senior-ui-ux-engineer-data-engineering-3-month-contract-'>CPP Investment Board Senior UI/UX Engineer, Data Engineering  (3-month Contract) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CPPInvestmentBoard/743999698516709-senior-ui-ux-engineer-data-engineering-3-month-contract-'>CPP Investment Board Senior UI/UX Engineer, Data Engineering  (3-month Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -277,7 +281,7 @@ systems,?...</p>
 <p><span class="badge badge-light">Bern, Schweiz</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/D7AC576228'>Data Engineer (Contract To Hire) - Trantor Software</a></h5> 
+<h5><a href='https://www.workable.com/j/D7AC576228'>Data Engineer (Contract To Hire) - Trantor Software</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... About TrantorFounded in 2009, Trantor is a leading software services company 
 headquartered in Menlo Park, California. We deliver innovative technology?...</p>
@@ -416,7 +420,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://rbauction.referrals.selectminds.com/jobs/data-engineer-2851'>Data Engineer - Ritchie Bros. Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rbauction.referrals.selectminds.com/jobs/data-engineer-2851'>Data Engineer - Ritchie Bros. Careers</a></h5> 
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -464,7 +468,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698254432-data-engineering-consultant'>Devoteam Data Engineering Consultant | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698254432-data-engineering-consultant'>Devoteam Data Engineering Consultant | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Stockholm, Sweden  Stockholm</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -478,10 +482,6 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/GFHealthProductsInc/743999696612587-data-engineer'>GF Health Products, Inc. Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/it89qgo47165u3mben7j4ajxwy'>Senior Data Engineer | Averity</a></h5> 
-<p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
 
